@@ -35,6 +35,7 @@ bugtracker.web = http://github.com/theory/sqitch/issues/
 
 [AutoPrereqs]
 skip = ^Win32
+skip = ^DBD::
 
 [Prereqs]
 Devel::StackTrace = 1.30
