@@ -74,8 +74,9 @@ has dbh => (
     default => sub {
         my $self = shift;
         local $@;
-        eval 'require DBD::SQLite';
-        hurl sqlite => __ 'DBD::SQLite module required to manage SQLite' if $@;
+        try { require DBD::SQLite } catch {
+            hurl sqlite => __ 'DBD::SQLite module required to manage SQLite';
+        };
 
         my $dsn = 'dbi:SQLite:dbname=' . ($self->sqitch_db || hurl sqlite => __(
             'No database specified; use --db-name set "ore.sqlite.db_name" via sqitch config'
