@@ -1,6 +1,9 @@
 Revision history for Perl extension App::Sqitch
 
 0.964
+     - Fixed test failure on Perl versions lower than 5.14 when DBD::SQLite or
+       DBD::Pg is not installed.
+     - Removed DBD::SQLite from the list of build dependencies.
 
 0.963  2013-04-12T19:11:29Z
      - Fixed a test failure when Git is in the execution path and the test is
